--- a/front-end/src/website/home-page/home-page.component.css
+++ b/front-end/src/website/home-page/home-page.component.css
@@ -1,28 +1,29 @@
 .home-container {
-    text-align: center;
-    margin-top: 100px;
-  }
-  
-  h1 {
-    font-size: 4em;
-  }
-  
-  .motto {
-    font-size: 1.5em;
-    margin-bottom: 50px;
-  }
-  
-  .get-started-btn {
-    padding: 10px 20px;
-    font-size: 1.2em;
-    color: #f5f5dc;
-    background-color: #f5f5dc;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .get-started-btn:hover {
-    background-color: #f5f5dc;
-  }
+  text-align: center;
+  margin-top: 100px;
+  background-color: #f5f5f5;
+}
+
+h1 {
+  font-size: 4em;
+}
+
+.motto {
+  font-size: 1.5em;
+  margin-bottom: 50px;
+}
+
+.get-started-btn {
+  padding: 10px 20px;
+  font-size: 1.2em;
+  color: #FFFFFF; 
+  background-color: #007bff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.get-started-btn:hover {
+  background-color: #0056b3;
+}
