Started to Develop the Website
- MVP home page
- MVP select majors page

--- a/front-end/src/website/home-page/home-page.component.html
+++ b/front-end/src/website/home-page/home-page.component.html
@@ -1,5 +1,5 @@
 <div class="home-container">
-  <img src="/front-end/src/assets/apinsights.PNG" alt="APInsights Logo" class="logo">
+  <p class="logo">APInsights</p>
   <p class="motto">Your ultimate guide to AP class selection and success.</p>
   <button class="get-started-btn" (click)="navigateToMajors()">Get Started</button>
 </div>
