Developed Home-Page and Proto-type Majors Page
- homepage is working fine
- majors page selection feature needs some working on

--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,15 +1,11 @@
 <div class="app-container">
   <header>
-    <nav>
-      <a routerLink="/home-page">Home</a>
-      <a routerLink="/majors">Majors</a>
-      <a routerLink="/ap-classes">AP Classes</a>
-      <a routerLink="/recommendations">Recommendations</a>
-    </nav>
   </header>
 
   <main>
     <router-outlet></router-outlet>
   </main>
-
+  
+  <footer>
+  </footer>
 </div>
