--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -1,3 +1,8 @@
 body {
-    background-color: #f5f5dc;
-  }
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100vh;
+  font-family: 'Helvetica Neue', Arial, sans-serif;
+  background-image: linear-gradient(to bottom right, #FFC0CB, #ADD8E6);
+}
