--- a/front-end/src/website/home-page/home-page.component.css
+++ b/front-end/src/website/home-page/home-page.component.css
@@ -1,29 +1,61 @@
-.home-container {
-  text-align: center;
-  margin-top: 100px;
-  background-color: #f5f5f5;
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100vh;
+  font-family: 'Helvetica Neue', Arial, sans-serif;
+  background-image: linear-gradient(to bottom right, #FFC0CB, #ADD8E6);
+}
+
+.hero {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  text-align: left;
+  height: 80%; 
+  padding: 10%;
 }
 
 h1 {
-  font-size: 4em;
+  font-size: 6em;
+  color: #ffffff;
+  margin: 0;
+  font-weight: bold;
 }
 
-.motto {
-  font-size: 1.5em;
-  margin-bottom: 50px;
+.subtitle {
+  font-size: 2em;
+  color: #ffffff;
+  margin-top: 20px;
+  margin-bottom: 40px;
+  font-weight: lighter;
 }
 
-.get-started-btn {
-  padding: 10px 20px;
-  font-size: 1.2em;
-  color: #FFFFFF; 
-  background-color: #007bff;
+.button {
+  padding: 10px;
+  width: 150px;
   border: none;
-  border-radius: 5px;
+  border-radius: 20px;
+  background-color: #8B0000;
+  color: white;
+  font-size: 1.5em;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.3s;
+  z-index: 1000;
 }
 
-.get-started-btn:hover {
-  background-color: #0056b3;
+.button:hover {
+  background-color: #A52A2A;
+}
+
+.hero-image {
+  flex-basis: 40%;
+}
+
+.hero-image img {
+  width: auto;
+  max-height: 70vh;
+  margin-left: 100px;
+  margin-right: auto;
+  padding: 20px;
 }
