--- a/front-end/src/website/home-page/home-page.component.html
+++ b/front-end/src/website/home-page/home-page.component.html
@@ -1,5 +1,10 @@
-<div class="home-container">
-  <p class="logo">APInsights</p>
-  <p class="motto">Your ultimate guide to AP class selection and success.</p>
-  <button class="get-started-btn" (click)="navigateToMajors()">Get Started</button>
-</div>
+  <section class="hero">
+    <div class="hero-content">
+      <h1>APInsights</h1>
+      <p class="subtitle">Navigate Your AP Journey with Confidence and Support</p>
+      <button class="button" (click)="navigateToMajors()">Get Started</button>
+    </div>
+    <div class="hero-image">
+      <img src="/assets/acorn.png" alt="APLogo">
+    </div>
+  </section>
