--- a/front-end/src/website/majors/majors-list/majors-list.component.html
+++ b/front-end/src/website/majors/majors-list/majors-list.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-        <h1>Please select two majors from the following list:</h1>
+        <h1>Please select two majors from the following list</h1>
     </div>
     <div class="content">
         <div class="categories">
