--- a/front-end/src/website/home-page/home-page.component.css
+++ b/front-end/src/website/home-page/home-page.component.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
+
 body {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100vh;
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'DM Sans', sans-serif;
   background-image: linear-gradient(to bottom right, #FFC0CB, #ADD8E6);
 }
 
