--- a/client/src/website/home-page/home-page.component.css
+++ b/client/src/website/home-page/home-page.component.css
@@ -1,20 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
-
-body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100vh;
-  font-family: 'DM Sans', sans-serif;
-  background-image: linear-gradient(to bottom right, #FFC0CB, #ADD8E6);
-}
-
 .hero {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
   text-align: left;
-  height: 80%; 
+  flex-grow: 1;
   padding: 10%;
 }
 
@@ -50,14 +39,52 @@ h1 {
   background-color: #e95c73;
 }
 
-.hero-image {
-  flex-basis: 40%;
-}
-
 .hero-image img {
   width: auto;
   max-height: 70vh;
   margin-left: 100px;
   margin-right: auto;
   padding: 20px;
+}
+
+.site-footer {
+  border-top: 2px solid #63bddb; 
+  display: flex;
+  align-items: center;
+  padding-top: 10px;
+  margin-top: 75px;
+}
+
+.footer-container {
+  width: 100%;
+  max-width: 1900px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-left, .footer-right {
+  display: flex;
+  align-items: center;
+  color: #0b94c2;
+}
+
+.footer-logo {
+  width: 30px;
+  height: auto;
+  margin-right: 10px;
+}
+
+.footer-left p, .footer-right a {
+  text-align: center;
+}
+
+.footer-link {
+  color: inherit;
+  text-decoration: none;
+}
+
+.footer-link:hover {
+  text-decoration: underline; 
 }
