--- a/client/src/website/home-page/home-page.component.css
+++ b/client/src/website/home-page/home-page.component.css
@@ -12,6 +12,7 @@ h1 {
   color: #83c5db;
   margin: 0;
   font-weight: bold;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
 }
 
 .subtitle {
@@ -20,6 +21,7 @@ h1 {
   margin-top: 20px;
   margin-bottom: 40px;
   font-weight: lighter;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
 }
 
 .button {
@@ -31,8 +33,10 @@ h1 {
   color: rgb(250, 127, 148);
   font-size: 1.5em;
   cursor: pointer;
-  transition: background-color 0.3s;
+  transition: background-color 0.3s, box-shadow 0.3s;
   z-index: 1000;
+  font-weight: bold;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1); 
 }
 
 .button:hover {
@@ -68,6 +72,7 @@ h1 {
   display: flex;
   align-items: center;
   color: #0b94c2;
+  font-weight: bold;
 }
 
 .footer-logo {
