--- a/client/src/website/recommendations/recommendations-view/recommendations-view.component.css
+++ b/client/src/website/recommendations/recommendations-view/recommendations-view.component.css
@@ -1,6 +1,7 @@
 .recommendations-container h2 {
   color: #54b2d1;
   text-align: center;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
 }
 
 .edit-majors-button-container {
@@ -15,23 +16,25 @@
   font-size: 1.2em;
 }
 
-  
-  .button {
-    padding: 10px;
-    width: 150px;
-    border: none;
-    border-radius: 20px;
-    background-color: #FFC0CB;
-    color: rgb(250, 127, 148);
-    font-size: 1.5em;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    z-index: 1000;
-  }
-  
-  .button:hover {
-    background-color: #e95c73;
-  }
+.button {
+  padding: 10px;
+  width: 150px;
+  border: none;
+  border-radius: 20px;
+  background-color: #FFC0CB;
+  color: rgb(250, 127, 148);
+  font-size: 1.5em;
+  cursor: pointer;
+  transition: background-color 0.3s, box-shadow 0.3s;
+  z-index: 1000;
+  font-weight: bold;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+
+.button:hover {
+  background-color: #e95c73;
+}
   
   
   
