--- a/client/src/website/home-page/home-page.component.html
+++ b/client/src/website/home-page/home-page.component.html
@@ -16,7 +16,7 @@
     </div>
     <div class="footer-right">
       <img src="/assets/githublogo.png" alt="GitHub Logo" class="footer-logo">
-      <a href="https://github.com/dylanscarpati/apinsights" target="_blank" rel="noopener noreferrer" class="footer-link">Check out the Github</a>
+      <a href="https://github.com/dylanscarpati/apinsights" target="_blank" rel="noopener noreferrer" class="footer-link">Check out my Github</a>
     </div>
   </div>
 </footer>
